--- a/industrial-forum/index.html
+++ b/industrial-forum/index.html
@@ -113,7 +113,7 @@ var virtual_conference_loadmore_params = {"ajaxurl":"https:\/\/mrinalsharma14.gi
                 </button>
                 <div class="menu-main-menu-container"><ul id="menu-main-menu" class="menu">
 <li id="menu-item-141" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-141"><a href="https://mrinalsharma14.github.io/IE2023/">Home</a></li>
-<li id="menu-item-128" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-128"><a href="https://mrinalsharma14.github.io/IE2023/call-for-papers/">Call for Papers:</a></li>
+<li id="menu-item-128" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-128"><a href="https://mrinalsharma14.github.io/IE2023/call-for-papers/">Call for Papers</a></li>
 <li id="menu-item-134" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-134"><a href="https://mrinalsharma14.github.io/IE2023/call-for-tutorials/">Call for Tutorials</a></li>
 <li id="menu-item-132" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-59 current_page_item menu-item-132"><a href="https://mrinalsharma14.github.io/IE2023/industrial-forum/" aria-current="page">Industrial Forum</a></li>
 </ul></div>            </nav><!-- #site-navigation -->
@@ -147,11 +147,11 @@ var virtual_conference_loadmore_params = {"ajaxurl":"https:\/\/mrinalsharma14.gi
         
         <article>
             
+<p>Brief: This will be a networking event and an opportunity for the business sector to showcase their innovation.</p>
+
+
+
 <p>More info to be updated..</p>
-
-
-
-<p>This will be a networking event and an opportunity for the business sector to showcase their innovation.</p>
                     </article> <!-- /.end of article -->
     </div>
 
@@ -179,7 +179,9 @@ var virtual_conference_loadmore_params = {"ajaxurl":"https:\/\/mrinalsharma14.gi
   
   <div class="footer-widget-wrapper">
           <div class="f-block">
-        <section id="block-10" class="widget widget_block"></section>      </div>
+        <section id="block-13" class="widget widget_block widget_text">
+<p>19<sup>th</sup> International Conference on Intelligent Environments (IE’23)</p>
+</section>      </div>
           <div class="f-block">
               </div>
           <div class="f-block">
