--- a/call-for-tutorials/index.html
+++ b/call-for-tutorials/index.html
@@ -241,15 +241,11 @@ var virtual_conference_loadmore_params = {"ajaxurl":"https:\/\/mrinalsharma14.gi
 
 
 
-<p>Jian Yu (<a href="mailto:jian.yu@aut.ac.nz">jian.yu</a>@gmail.com)</p>
-
-
-
-<p>Zia Lallmahomed (<a href="mailto:z.lallmahomed@mdx.ac.mu">z.lallmahomed</a>@gmail.com)</p>
-
-
-
-<p>Niki Martinel (<a href="mailto:niki.martinel@uniud.it">niki.martinel</a>@gmail.com)</p>
+<ul>
+<li>Jian Yu (<a href="mailto:jian.yu@aut.ac.nz">jian.yu[at]aut.ac.nz</a>)</li>
+<li>Zia Lallmahomed (<a href="mailto:z.lallmahomed@mdx.ac.mu">z.lallmahomed[at]mdx.ac.mu</a>)</li>
+<li>Niki Martinel (<a href="mailto:niki.martinel@uniud.it">niki.martinel[at]uniud.it</a>)</li>
+</ul>
 
 
 
