--- a/call-for-workshops/index.html
+++ b/call-for-workshops/index.html
@@ -213,7 +213,7 @@ var virtual_conference_loadmore_params = {"ajaxurl":"https:\/\/mrinalsharma14.gi
 
 
 
-<p>To submit the workshop proposal for IE2023, please send an email to the general workshop chairs <a href="mailto:mecella@diag.uniroma1.it">mecella@</a>gmail.com,&nbsp; <a href="mailto:s.ben.allouch@hva.nl">s.ben.allouch@gmail.com</a> and <a href="mailto:g.bekaroo@mdx.ac.mu">g.bekaroo@gmail.com</a></p>
+<p>To submit the workshop proposal for IE2023, please send an email to the general workshop chairs <a href="mailto:mecella@diag.uniroma1.it">mecella[at]diag.uniroma1.it</a>,  <a href="mailto:s.ben.allouch@hva.nl">s.ben.allouch[at]hva.nl</a> and <a href="mailto:g.bekaroo@mdx.ac.mu">g.bekaroo[at]mdx.ac.mu</a></p>
 
 
 
@@ -255,17 +255,20 @@ var virtual_conference_loadmore_params = {"ajaxurl":"https:\/\/mrinalsharma14.gi
 
 
 
-<p><strong>General workshop chairs</strong></p>
+<p><strong>General Workshop Chairs</strong></p>
 
 
 
 <ul>
 <li>
-<strong>Massimo Mecella</strong>, Sapienza University of Rome, <a href="mailto:mecella@diag.uniroma1.it">mecella@</a>gmail.com</li>
+<strong>Massimo Mecella</strong>, Sapienza University of Rome, <a href="mailto:mecella@diag.uniroma1.it">mecella[at]diag.uniroma1.it</a>
+</li>
 <li>
-<strong>Somaya Ben Allouch</strong>, Hogeschool van Amsterdam, <a href="mailto:s.ben.allouch@hva.nl">s.ben.allouch@</a>gmail.com</li>
+<strong>Somaya Ben Allouch</strong>, Hogeschool van Amsterdam, <a href="mailto:s.ben.allouch@hva.nl">s.ben.allouch[at]hva.nl</a>
+</li>
 <li>
-<strong>Girish Bekaroo</strong>, Middlesex University Mauritius, <a href="mailto:g.bekaroo@mdx.ac.mu">g.bekaroo@</a>gmail.com</li>
+<strong>Girish Bekaroo</strong>, Middlesex University Mauritius, <a href="mailto:g.bekaroo@mdx.ac.mu">g.bekaroo[at]mdx.ac.mu</a>
+</li>
 </ul>
                     </article> <!-- /.end of article -->
     </div>
